--- a/src/main/resources/templates/email-confirmation.html
+++ b/src/main/resources/templates/email-confirmation.html
@@ -13,16 +13,15 @@
     <nav th:replace="fragments/logged-out-navbar"></nav>
 
         <div class="container">
-            <form >
             <div class="text-center mt-5 mb-3">
                 <h3 th:text="#{mail.verification.header}"></h3>
             </div>
                 <div class="text-center mt-3 mb-5">
                     <h5 th:text="#{mail.verification.context}"></h5>
-                    <button type="button" onclick="sendVerification()" th:text="#{mail.verification.send}"></button>
+                    <button type="button" class="btn btn-primary" onclick="sendVerification()" th:text="#{mail.verification.send}"></button>
                 </div>
 
-            </form>
+
         </div>
 
     <footer th:replace="fragments/footer"></footer>
