--- a/src/main/resources/templates/equipments-front.html
+++ b/src/main/resources/templates/equipments-front.html
@@ -16,15 +16,22 @@
 <div class="container my-5">
     <h5 th:text="#{equipment.admin.header}"></h5>
 
-<!--    <button type="button" class="btn btn-success btn-lg btn-block" data-toggle="modal" data-target="#create-modal"-->
-<!--            th:text="#{Create}"></button>-->
+    <form id="filter" class="bg-light border m-0 p-0 my-3">
+        <div class="form-group row col-12 col-lg-6 border m-0 p-0 py-2">
+            <label class="col-12 col-sm-3 col-md-2 col-xl-3 my-auto text-center"
+                   th:text="#{equipment.front.name}"></label>
+            <div class="col-12 col-sm-9 col-md-10 col-xl-9 my-auto">
+                <input type="text" id="name" class="form-control"/>
+            </div>
+        </div>
+
+    </form>
 
     <div id="result-container" class="btn-block">
         <div class="table-responsive mb-0 pb-0">
             <table class="table bg-light table-bordered table-hover table-sm mb-0 pb-0">
                 <thead class="thead-light">
                 <tr>
-                    <th class="align-middle" th:text="#{equipment.admin.id}"></th>
                     <th class="align-middle" th:text="#{equipment.admin.name}"></th>
                     <th class="align-middle" th:text="#{equipment.admin.create.date}"></th>
                     <th class="align-middle" th:text="#{equipment.admin.edit.date}"></th>
@@ -61,8 +68,8 @@
         </div>
     </div>
 </div>
-    <div th:replace="fragments/operation-successful-modal :: modal"></div>
-    <div th:replace="fragments/delete-object-modal :: modal"></div>
+<div th:replace="fragments/operation-successful-modal :: modal"></div>
+<div th:replace="fragments/delete-object-modal :: modal"></div>
 </body>
 
 </html>
