--- a/src/main/resources/templates/fragments/front-head.html
+++ b/src/main/resources/templates/fragments/front-head.html
@@ -14,7 +14,7 @@
 <script th:src="@{/libs/bootstrap.bundle.min.js}"></script>
 <script th:src="@{/libs/fontawesome/all.min.js}"></script>
 <script th:src="@{/js/front-index.js}"></script>
-<!--<script th:src="@{/js/navbar-notifications.js}"></script>-->
+<script th:src="@{/js/navbar-notifications.js}"></script>
 
 <div class="modal fade" id="cookie-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document" style="margin-top: 0rem;max-width: 100%;">
