--- a/src/main/resources/templates/fragments/equipment-front-head.html
+++ b/src/main/resources/templates/fragments/equipment-front-head.html
@@ -19,3 +19,4 @@
 <script th:src="@{/js/admin-index.js}"></script>
 <script th:replace="fragments/languages-script-admin"></script>
 <script th:src="@{/libs/fontawesome/all.min.js}"></script>
+<script th:src="@{/js/navbar-notifications.js}"></script>
