--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -16,3 +16,4 @@
 <script th:src="@{/js/index.js}"></script>
 <script th:src="@{/js/admin-index.js}"></script>
 <script th:replace="fragments/languages-script-admin"></script>
+<script th:src="@{/js/navbar-notifications.js}"></script>
