--- a/src/main/resources/templates/equipments-front.html
+++ b/src/main/resources/templates/equipments-front.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
-
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-
 <head>
-    <div th:replace="fragments/equipment-front-head"></div>
+    <script th:replace="fragments/equipment-front-head"></script>
     <script th:inline="javascript"></script>
     <script th:src="@{/js/equipments-front.js}"></script>
     <script th:src="@{/libs/sha.js}"></script>
