--- a/src/main/resources/templates/notifications-admin.html
+++ b/src/main/resources/templates/notifications-admin.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <script th:replace="fragments/equipment-front-head"></script>
+    <script th:replace="fragments/head"></script>
     <script th:inline="javascript"></script>
-    <script th:src="@{/js/notifications-front.js}"></script>
+    <script th:src="@{/js/notifications-admin.js}"></script>
     <script th:src="@{/libs/sha.js}"></script>
     <script th:inline="javascript">
     </script>
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<nav th:replace="${@userService.getLoggedUser()} ? 'fragments/logged-in-navbar' : 'fragments/logged-out-navbar'"></nav>
+<nav th:replace="fragments/menu :: menu"></nav>
 <div class="container my-5">
     <h5 th:text="#{notification.front.header}"></h5>
     <span id="notifications">
