--- a/src/main/resources/templates/equipment-front.html
+++ b/src/main/resources/templates/equipment-front.html
@@ -29,6 +29,17 @@
                         <div id="value-records">
                         </div>
                     </div>
+                    <div class="text-center">
+                        <div class="form-group col-md-6 text-center">
+                            <h6 th:text="#{picture.front.header}"></h6>
+                            <div id="picture" class="form-group">
+                            </div>
+                            <div class="form-group">
+                                <label for="fileInput" class="form-check-label file-input btn btn-info">Update picture</label>
+                                <input type='file' id='fileInput' name='file' style="display: none">
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </form>
     </form>
